tests/incremental_cycle_break/incremental_cycle_break.exp

Initial status:
No errors!

Clear A.js:
Error: B.js:5
  5: require('A');
             ^^^ A. Required module not found


Found 1 error

Restore A.js:
No errors!

Done!
